# train-depot

./: .dockerignore  .gitignore  Dockerfile  README.md  _debug.js  database.js  package.json  seed.js  server.js  start.sh  valuation.js
.github/workflows/: build.yml  docker-publish.yml
scripts/: smoke-test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs
static/: index.html  login.html  manifest.json  shared.html  sw.js
static/css/: styles.css
static/js/: app.js  auth.js  catalog.js  data-adapter.js  detail.js  form.js  layout.js  modals.js  reference-db.js  settings.js  valuation.js
unraid/: oo-gauge-catalog.xml
